refactors ProjectLayout feature